add dto's descriptions and resource's documents in openapi
