# src/main/java/ir/co/sadad/eb/resource/v1/AccountResource.java
@@ -2,15 +2,15 @@ package ir.co.sadad.eb.resource.v1;
 
 import ir.co.sadad.eb.service.AccountService;
 import ir.co.sadad.eb.service.dto.AccountDto;
-import ir.co.sadad.eb.service.dto.InvoiceDTO;
 import org.eclipse.microprofile.metrics.annotation.Timed;
 import org.eclipse.microprofile.openapi.annotations.Operation;
+import org.eclipse.microprofile.openapi.annotations.media.Content;
+import org.eclipse.microprofile.openapi.annotations.media.Schema;
 import org.eclipse.microprofile.openapi.annotations.parameters.Parameters;
+import org.eclipse.microprofile.openapi.annotations.parameters.RequestBody;
 import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
-import org.joda.time.LocalDate;
 
 import javax.inject.Inject;
-import javax.validation.Valid;
 import javax.ws.rs.*;
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.Response;
@@ -33,7 +33,9 @@ public class AccountResource {
     @POST
     @Consumes({MediaType.APPLICATION_JSON})
     @Produces({MediaType.APPLICATION_JSON})
-    public Response createAccount(AccountDto accountDto) {
+    public Response createAccount(@RequestBody(description = "حساب"
+            ,content = @Content(mediaType = "application/json"
+            ,schema = @Schema(implementation = AccountDto.class))) AccountDto accountDto) {
         return Response.ok(accountService.createAccount(accountDto)).build();
     }
 }
